tests/fixtures/LatestTests/DynamicVariableTests/errors/assign_to_non_lvalue.fg
/; EXPECT_ERROR: AssignmentToNonLValue
5 = 10
print(5, "\n")

